<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:layout_gravity="center_vertical"
    tools:context="com.vitaliyhtc.autoelectric.MainInfoActivity">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:id="@+id/imageViewAppIcon"
                android:src="@drawable/alt_icon"
                android:contentDescription="@string/alt_icon_description"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:id="@+id/textViewAppName"
                android:layout_alignTop="@+id/imageViewAppIcon"
                android:layout_toRightOf="@+id/imageViewAppIcon"
                android:layout_toEndOf="@+id/imageViewAppIcon"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textColor="@color/Black"
                android:textSize="24sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:id="@+id/textViewAppVersion"
                android:layout_below="@+id/textViewAppName"
                android:layout_toRightOf="@+id/imageViewAppIcon"
                android:layout_toEndOf="@+id/imageViewAppIcon"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/Black" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vitaliyhtc_copyright"
                android:id="@+id/textViewAuthor"
                android:layout_below="@+id/textViewAppVersion"
                android:layout_toRightOf="@+id/imageViewAppIcon"
                android:layout_toEndOf="@+id/imageViewAppIcon"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/Black" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version_description"
                android:id="@+id/textView1"
                android:layout_below="@+id/imageViewAppIcon"
                android:layout_alignLeft="@+id/imageViewAppIcon"
                android:layout_alignStart="@+id/imageViewAppIcon" />

</RelativeLayout>
